test/sema/typeck/struct/immutable-field.out
error: Fields of this type are immutable.
--> immutable-field.dora:4:5
 | 
 | fn f(f: Foo) {
 |     f.value = 10;
       ~~~~~~~~~~~~
 | }
 | 
1 error found.
