test/sema/typeck/struct/immutable-field.dora
struct Foo { value: Int64 }

fn f(f: Foo) {
    f.value = 10;
}
